TAB-49 Refactoring main page pickers solved problem with too long text and arrows

--- a/src/app/styles/components/mainPageComponent.scss
+++ b/src/app/styles/components/mainPageComponent.scss
@@ -63,26 +63,40 @@
       .flat-button {
         -moz-box-shadow: 0 0 60px -9px rgba(0,0,0,0.71);
         -webkit-box-shadow: 0 0 60px -9px rgba(0,0,0,0.71);
-        align-items: center;
         background-color: $gold;
         border: 0;
         border-radius: 3px;
         box-shadow: 0 0 60px -9px rgba(0,0,0,71);
         color: $white;
         display: flex;
-        font-size: calc(.6vw + 10px);
+        font-size: calc(.8vw + 10px);
         height: 20%;
         justify-content: center;
         margin: 5px;
-        min-height: 40px;
+        min-height: 50px;
         min-width: 150px;
         padding: 5px;
         text-align: center;
         width: 20%;
 
+        p {
+          align-self: center;
+          font-family: inherit;
+          font-size: calc(.6vw + 10px);
+          font-weight: 700;
+          letter-spacing: .5px;
+          overflow: hidden;
+          text-align: center;
+          text-decoration: inherit;
+          text-overflow: ellipsis;
+          text-transform: uppercase;
+          white-space: nowrap;
+          width: 80%;
+        }
+
         svg {
           align-self: center;
-          height: 40%;
+          height: 45%;
           transform: rotate(270deg);
           width: 10%;
 
