--- a/src/app/styles/utils/datePicker.scss
+++ b/src/app/styles/utils/datePicker.scss
@@ -7,19 +7,16 @@
   height: 20%;
   justify-content: center;
   margin: 5px;
-  min-height: 40px;
+  min-height: 50px;
   min-width: 150px;
   width: 18%;
 
   .select-day {
-    align-items: center;
     background-color: $gold;
     border: 0;
     color: $gold;
     cursor: pointer;
-    display: flex;
     height: 100%;
-    justify-content: center;
     padding: 0;
     width: 14%;
   }
