--- a/src/app/styles/utils/hourPicker.scss
+++ b/src/app/styles/utils/hourPicker.scss
@@ -4,11 +4,12 @@
   border-radius: 3px;
   box-shadow: 0 0 60px -10px rgba(0,0,0,71);
   display: flex;
+  flex-direction: row;
   flex-wrap: wrap;
   height: 20%;
   justify-content: center;
   margin: 5px;
-  min-height: 40px;
+  min-height: 50px;
   min-width: 120px;
   width: 16%;
 
@@ -32,13 +33,10 @@
   }
 
   .select-hour {
-    align-items: center;
     background-color: $gold;
     border: 0;
     cursor: pointer;
-    display: flex;
     height: 100%;
-    justify-content: center;
     padding: 0;
     width: 16%;
   }
