--- a/src/app/styles/utils/peoplePicker.scss
+++ b/src/app/styles/utils/peoplePicker.scss
@@ -9,7 +9,7 @@
   height: 20%;
   justify-content: center;
   margin: 5px;
-  min-height: 40px;
+  min-height: 50px;
   min-width: 70px;
   width: 14%;
 
